BPK-174 - fixed ie native select icon position Also: - removed clear button from inputs in IE - Fixed home page layout in IE - Fixed checkbox and radio button borders on mobile safari

--- a/packages/bpk-component-checkbox/src/bpk-checkbox.scss
+++ b/packages/bpk-component-checkbox/src/bpk-checkbox.scss
@@ -9,6 +9,7 @@
     height: $_small-svg-size;
     margin: 0;
     padding: 0;
+    border: 0;
     background: url(map-get($bpk-elements, checkbox-normal)) no-repeat;
     cursor: pointer;
     vertical-align: text-bottom;
